src/objects/UserStory__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <inlineHelpText>List all criteria that must be met for the User Story to be accepted.  Use a numbered list to list multiple criteria.</inlineHelpText>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Custom_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if custom development is needed for the solution.</inlineHelpText>
        <label>Custom Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customization_Description__c</fullName>
        <inlineHelpText>Describe the required customization.  Provide as much detail as possible.</inlineHelpText>
        <label>Customization Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dev_Status__c</fullName>
        <label>Dev Status</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Test in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retest needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Epic_Name__c</fullName>
        <formula>Epic__r.Epic_Name__c</formula>
        <label>Epic Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Epic</label>
        <referenceTo>Epic__c</referenceTo>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the solution will require integration with an external system.</inlineHelpText>
        <label>Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoE_Number__c</fullName>
        <formula>VALUE(TEXT(Story_Points__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoE Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manual_Steps__c</fullName>
        <inlineHelpText>Enter any manual steps that are needed.</inlineHelpText>
        <label>Manual Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NIST_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check when approval for the User Story has been granted.</inlineHelpText>
        <label>NIST Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Follow-up?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Out_of_the_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of the Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release_Notes__c</fullName>
        <label>Release Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Requester_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requester_Office__c</fullName>
        <inlineHelpText>Choose the office of the Requester.</inlineHelpText>
        <label>Requester Office</label>
        <picklist>
            <picklistValues>
                <fullName>AMNPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baldrige</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calibrations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCNR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authentication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <label>Requester</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move to QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed to QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move to UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed to UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move to Prod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Points__c</fullName>
        <label>Level of Effort</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>89</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Type__c</fullName>
        <label>Story Type</label>
        <picklist>
            <picklistValues>
                <fullName>Configuration</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Story_Points__c</fullName>
        <label>Task Story Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Story_Name__c</fullName>
        <label>Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <inlineHelpText>Format: &quot;As a &lt;role&gt;, I want &lt;goal/desire&gt; so that &lt;benefit&gt;.&quot;</inlineHelpText>
        <label>User Story</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>All_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>User_Story_Name__c</columns>
        <columns>User_Story__c</columns>
        <columns>Status__c</columns>
        <columns>Sprint__c</columns>
        <columns>Story_Points__c</columns>
        <filterScope>Everything</filterScope>
        <label>All User Stories</label>
    </listViews>
    <listViews>
        <fullName>Backlog</fullName>
        <columns>NAME</columns>
        <columns>User_Story__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <columns>Requester_Office__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>Backlog</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Archived</value>
        </filters>
        <label>Backlog</label>
    </listViews>
    <listViews>
        <fullName>Complete</fullName>
        <columns>NAME</columns>
        <columns>User_Story_Name__c</columns>
        <columns>User_Story__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <columns>Story_Points__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Dev Complete,Deployed</value>
        </filters>
        <label>Complete</label>
    </listViews>
    <listViews>
        <fullName>Development_Work</fullName>
        <columns>NAME</columns>
        <columns>User_Story_Name__c</columns>
        <columns>Requester_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012r00000000Z1G</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Archived</value>
        </filters>
        <label>Development Work</label>
    </listViews>
    <listViews>
        <fullName>ITL</fullName>
        <columns>NAME</columns>
        <columns>User_Story_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Needs_Follow_up__c</columns>
        <columns>User_Story__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requester_Office__c</field>
            <operation>equals</operation>
            <value>ITL</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012r00000000Z1G</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Archived</value>
        </filters>
        <label>ITL</label>
    </listViews>
    <listViews>
        <fullName>ITL_Backlog</fullName>
        <columns>NAME</columns>
        <columns>User_Story_Name__c</columns>
        <columns>Sprint__c</columns>
        <columns>Status__c</columns>
        <columns>Needs_Follow_up__c</columns>
        <columns>User_Story__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requester_Office__c</field>
            <operation>equals</operation>
            <value>ITL</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012r00000000Z1G</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Archived</value>
        </filters>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>Backlog</value>
        </filters>
        <label>ITL Backlog</label>
    </listViews>
    <listViews>
        <fullName>ITL_Reporting</fullName>
        <columns>NAME</columns>
        <columns>User_Story_Name__c</columns>
        <columns>Sprint__c</columns>
        <columns>Status__c</columns>
        <columns>Needs_Follow_up__c</columns>
        <columns>User_Story__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requester_Office__c</field>
            <operation>equals</operation>
            <value>ITL</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012r00000000Z1G</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Archived</value>
        </filters>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>ITL Reporting</value>
        </filters>
        <label>ITL Reporting</label>
    </listViews>
    <listViews>
        <fullName>ITL_Sprint_4</fullName>
        <columns>NAME</columns>
        <columns>User_Story_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Needs_Follow_up__c</columns>
        <columns>User_Story__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requester_Office__c</field>
            <operation>equals</operation>
            <value>ITL</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012r00000000Z1G</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Archived</value>
        </filters>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>Sprint 4</value>
        </filters>
        <label>ITL Sprint 4</label>
    </listViews>
    <listViews>
        <fullName>ITL_Sprint_5</fullName>
        <columns>NAME</columns>
        <columns>User_Story_Name__c</columns>
        <columns>Epic_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Dev_Status__c</columns>
        <columns>Needs_Follow_up__c</columns>
        <columns>User_Story__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requester_Office__c</field>
            <operation>equals</operation>
            <value>ITL</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012r00000000Z1G</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Archived</value>
        </filters>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>Sprint 5</value>
        </filters>
        <label>ITL Sprint 5</label>
    </listViews>
    <listViews>
        <fullName>ITL_Sprint_6</fullName>
        <columns>NAME</columns>
        <columns>User_Story_Name__c</columns>
        <columns>Epic_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Needs_Follow_up__c</columns>
        <columns>User_Story__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012r00000000Z1G</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Archived</value>
        </filters>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>Sprint 6</value>
        </filters>
        <label>ITL Sprint 6</label>
    </listViews>
    <listViews>
        <fullName>My_User_Stories</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My User Stories</label>
    </listViews>
    <listViews>
        <fullName>Project_Central_Approvers_UserStory</fullName>
        <filterScope>Queue</filterScope>
        <label>Project Central Approvers</label>
        <queue>Project_Central_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sprint_1</fullName>
        <columns>NAME</columns>
        <columns>User_Story__c</columns>
        <columns>Status__c</columns>
        <columns>Requester_Office__c</columns>
        <columns>User_Story_Name__c</columns>
        <columns>Sprint__c</columns>
        <columns>Story_Points__c</columns>
        <columns>NIST_Approval__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>Sprint 1</value>
        </filters>
        <label>Sprint 1</label>
    </listViews>
    <listViews>
        <fullName>Sprint_2</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Requester_Office__c</columns>
        <columns>User_Story__c</columns>
        <columns>User_Story_Name__c</columns>
        <columns>Sprint__c</columns>
        <columns>Story_Points__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NIST_Approval__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>Sprint 2</value>
        </filters>
        <label>Sprint 2</label>
    </listViews>
    <listViews>
        <fullName>Sprint_2_Tasks</fullName>
        <columns>NAME</columns>
        <columns>User_Story_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Notes__c</columns>
        <columns>Acceptance_Criteria__c</columns>
        <columns>Status__c</columns>
        <columns>NIST_Approval__c</columns>
        <columns>Story_Points__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>Sprint 2</value>
        </filters>
        <label>Sprint 2 Tasks</label>
    </listViews>
    <nameField>
        <displayFormat>WK-{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Status_Rule</fullName>
        <active>true</active>
        <description>Status cannot move beyond Reviewed until NIST Approved field is checked.</description>
        <errorConditionFormula>NIST_Approval__c == FALSE &amp;&amp; (ISPICKVAL( Status__c , &apos;Accepted&apos;) || ISPICKVAL( Status__c , &apos;Dev In Progress&apos;) || ISPICKVAL( Status__c , &apos;Deployed&apos;) || ISPICKVAL( Status__c , &apos;Rejected&apos;)) &amp;&amp; $Profile.Id != &apos;00et0000000U9VD&apos;</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>You must submit the User Story for approval to move the Status beyond New or Reviewed.</errorMessage>
    </validationRules>
</CustomObject>